--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -70,19 +70,21 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  max-width: 800px;
+  max-width: 1000px;
+  width: 100%;
 }
 
 .card {
   margin: 1rem;
-  padding: 1.5rem;
+  padding: 2.7rem;
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #eaeaea;
+  border: 1px solid wheat;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   max-width: 300px;
+  color: black;
 }
 
 .card:hover,
@@ -116,13 +118,16 @@
 }
 
 @media (prefers-color-scheme: dark) {
+
   .card,
   .footer {
     border-color: #222;
   }
+
   .code {
     background: #111;
   }
+
   .logo img {
     filter: invert(1);
   }
